digits-eks/eks-demo/eks-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-demo-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "eks-demo.cbioportal.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: eks-demo
            port:
              number: 80
  - host: "eks-session-service.cbioportal.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cbioportal-session-service
            port:
              number: 80
